Fix z-index for search bar

--- a/app/assets/stylesheets/components/search.css
+++ b/app/assets/stylesheets/components/search.css
@@ -7,7 +7,6 @@
     width: 100%;
     position: absolute;
     margin-top: 5%;
-    z-index: -1;
 }
 
 .word-set1 {
